# embedlite-components

./: .gitignore  .gitmodules  EmbedLiteBinComponents.manifest  Makefile.am  configure.ac  embedlite-components.pro  link_to_system.sh
chromehelper/: EmbedChromeListener.cpp  EmbedChromeListener.h  EmbedChromeManager.cpp  EmbedChromeManager.h  Makefile.am
history/: EmbedHistoryListener.cpp  EmbedHistoryListener.h
jscomps/: AboutRedirector.js  AlertsService.js  ContentPermissionManager.js  ContentPermissionPrompt.js  EmbedLiteChromeManager.js  EmbedLiteConsoleListener.js  EmbedLiteErrorPageHandler.js  EmbedLiteFaviconService.js  EmbedLiteGlobalHelper.js  EmbedLiteJSComponents.manifest  EmbedLiteOrientationChangeHandler.js  EmbedLiteSearchEngine.js  EmbedLiteSyncService.js  EmbedLiteWebAppInstall.js  EmbedLiteWebrtcUI.js  EmbedPrefService.js  EmbedliteDownloadManager.js  FilePicker.js  HelperAppDialog.js  IntentProtocolHandler.js  LoginManagerPrompter.js  LoginsHelper.js  Makefile.am  PrivateDataManager.js  PromptService.js  UserAgentOverrideHelper.js  XPIDialogService.js  nsLoginManagerPrompter.js
jsscripts/: ClickEventBlocker.js  ContentLinkHandler.jsm  ContextMenuHandler.js  EmbedLiteJSScripts.manifest  Feeds.jsm  FormAssistant.js  InputMethodHandler.js  Logger.js  Makefile.am  NetErrorHelper.jsm  OrientationChangeHandler.jsm  Prompt.jsm  SelectAsyncHelper.js  SelectionHandler.js  SelectionPrototype.js  UserAgentOverrides.jsm  UserAgentUpdates.jsm  Util.js  embedhelper.js
logger/: EmbedComponentsLog.cpp  EmbedComponentsLog.h
overrides/: EmbedLiteOverrides.manifest  Makefile.am  aboutCertError.xhtml  brand.dtd  netError.css  touchcontrols.css
overrides/en-US/: appstrings.properties  brand.dtd  brand.ftl  brand.properties  netError.dtd
overrides/fi/: aboutCertError.dtd  appstrings.properties  brand.properties
overrides/ru/: aboutCertError.dtd  appstrings.properties
prompt/: EmbedPromptRegister.cpp  EmbedPromptService.cpp  EmbedPromptService.h  Makefile.am  nsAlertsService.cpp  nsAlertsService.h
rpm/: 0001-Tweak-UA-for-Facebook-and-Engadget-to-get-images-of-.patch  0001-Tweak-UA-for-Facebook-to-get-images-of-proper-sizes.patch  0001-embedhelper-Avoid-zoomToRect-when-in-fullscreen-mode.patch  0001-embedlite-components-Tweak-UA-for-Facebook-to-get-im.patch  0002-Tweak-UA-for-Dailymotion-to-get-working-fullscreen-b.patch  embedlite-components-qt5.changes  embedlite-components-qt5.spec  embedlite-components.spec  fix-zoom-to-input-22077.patch
tests/htmltests/: webrtc.html
tools/: mine-localisation-files.py
touchhelper/: EmbedTouchListener.cpp  EmbedTouchListener.h  EmbedTouchManager.cpp  EmbedTouchManager.h  Makefile.am
widgetfactory/: EmbedWidgetFactoryRegister.cpp  Makefile.am  nsFilePicker.cpp  nsFilePicker.h
