jscomps_manifestdir=$(libdir)/mozembedlite/components
jscomps_manifest_DATA = \
	EmbedLiteJSComponents.manifest \
	AboutRedirector.js \
	AlertsService.js \
	nsLoginManagerPrompter.js \
	HelperAppDialog.js \
	EmbedPrefService.js \
	FilePicker.js \
	ContentPermissionPrompt.js \
	EmbedLiteGlobalHelper.js \
	EmbedLiteConsoleListener.js \
	EmbedLiteOrientationChangeHandler.js \
	EmbedLiteSyncService.js \
	EmbedLiteFaviconService.js \
	EmbedLiteSearchEngine.js \
	EmbedLiteErrorPageHandler.js \
	UserAgentOverrideHelper.js \
	XPIDialogService.js \
	PromptService.js \
	PrivateDataManager.js \
	EmbedliteDownloadManager.js \
	$(NULL)

AM_CPPFLAGS = $(DEPS_CFLAGS)
