jscomps_manifestdir=$(libdir)/mozembedlite/components
jscomps_manifest_DATA = \
	EmbedLiteJSComponents.manifest \
	AboutRedirector.js \
	AlertsService.js \
	LoginManagerPrompter.js \
	HelperAppDialog.js \
	EmbedPrefService.js \
	FilePicker.js \
	ContentPermissionPrompt.js \
	ContentPermissionManager.js \
	EmbedLiteGlobalHelper.js \
	EmbedLiteConsoleListener.js \
	EmbedLiteChromeManager.js \
	EmbedLiteOrientationChangeHandler.js \
	EmbedLiteSyncService.js \
	EmbedLiteFaviconService.js \
	EmbedLiteSearchEngine.js \
	EmbedLiteErrorPageHandler.js \
	UserAgentOverrideHelper.js \
	XPIDialogService.js \
	PromptService.js \
	PrivateDataManager.js \
	EmbedliteDownloadManager.js \
	LoginsHelper.js \
	EmbedLiteWebrtcUI.js \
	IntentProtocolHandler.js \
	$(NULL)

AM_CPPFLAGS = $(DEPS_CFLAGS)
