jsscripts_manifestdir=$(libdir)/mozembedlite/chrome/embedlite/content
jsscripts_manifest_DATA = \
	TelURIParser.jsm \
	embedhelper.js \
	SelectHelper.js \
	SelectAsyncHelper.js \
	SelectionHandler.js \
	Util.js \
	ContextMenuHandler.js \
	$(NULL)

sync_engine_manifestdir=$(libdir)/mozembedlite/chrome/embedlite/content/sync
sync_engine_manifest_DATA = \
	sync/bookmarks.js \
	$(NULL)

manifestsscript_manifestdir=$(libdir)/mozembedlite/chrome
manifestsscript_manifest_DATA = \
	EmbedLiteJSScripts.manifest \
	$(NULL)

AM_CPPFLAGS = $(DEPS_CFLAGS)
