jsscripts_manifestdir=$(libdir)/mozembedlite/chrome/embedlite/content
jsscripts_manifest_DATA = \
	embedhelper.js \
	Logger.js \
	Feeds.jsm \
	FormAssistant.js \
	ContentLinkHandler.jsm \
	OrientationChangeHandler.jsm \
	UserAgentUpdates.jsm \
	UserAgentOverrides.jsm \
	SelectAsyncHelper.js \
	SelectionHandler.js \
	SelectionPrototype.js \
	Util.js \
	ClickEventBlocker.js \
	ContextMenuHandler.js \
	Prompt.jsm \
	NetErrorHelper.jsm \
	$(NULL)

sync_engine_manifestdir=$(libdir)/mozembedlite/chrome/embedlite/content/sync
sync_engine_manifest_DATA = \
	sync/bookmarks.js \
	$(NULL)

manifestsscript_manifestdir=$(libdir)/mozembedlite/chrome
manifestsscript_manifest_DATA = \
	EmbedLiteJSScripts.manifest \
	$(NULL)

AM_CPPFLAGS = $(DEPS_CFLAGS)
