chromecontent_manifestdir=$(libdir)/mozembedlite/chrome/chrome/content
chromecontent_manifest_DATA = \
	aboutCertError.xhtml \
	netError.xhtml \
	$(NULL)

chromeskin_manifestdir=$(libdir)/mozembedlite/chrome/chrome/skin
chromeskin_manifest_DATA = \
	netError.css \
	touchcontrols.css \
	$(NULL)

chromeskinimages_manifestdir=$(libdir)/mozembedlite/chrome/chrome/skin/images
chromeskinimages_manifest_DATA = \
        images/clicktoplay-bgtexture.png \
        images/error.png \
        images/icon-m-pause.svg \
        images/icon-m-play.svg \
        images/icon-m-speaker-mute.svg \
        images/icon-m-speaker-on.svg \
        images/videoClickToPlayButton.svg \
        images/videocontrols-cast-active.svg \
        images/videocontrols-cast-ready.svg \
        images/videocontrols-exitfullscreen.svg \
        images/videocontrols-fullscreen.svg \
        images/videocontrols-mute.svg \
        images/videocontrols-pause.svg \
        images/videocontrols-play.svg \
        images/videocontrols-scrubber.svg \
        images/videocontrols-unmute.svg \
        $(NULL)

manifestsscript_manifestdir=$(libdir)/mozembedlite/chrome
manifestsscript_manifest_DATA = \
	EmbedLiteOverrides.manifest \
	$(NULL)

localebrand_manifestdir=$(libdir)/mozembedlite/chrome/en-US/locale/branding
localebrand_manifest_DATA = \
	brand.dtd \
	brand.properties \
	$(NULL)

localebrowser_manifestdir=$(libdir)/mozembedlite/chrome/en-US/locale/en-US/browser
localebrowser_manifest_DATA = \
	aboutCertError.dtd \
	netError.dtd \
	$(NULL)

AM_CPPFLAGS = $(DEPS_CFLAGS)
