chromecontent_manifestdir=$(libdir)/mozembedlite/chrome/chrome/content
chromecontent_manifest_DATA = \
	aboutCertError.xhtml \
	netError.xhtml \
	$(NULL)

chromeskin_manifestdir=$(libdir)/mozembedlite/chrome/chrome/skin
chromeskin_manifest_DATA = \
	netError.css \
	$(NULL)

mozappsskin_manifestdir=$(libdir)/mozembedlite/chrome/mozapps/skin/places
mozappsskin_manifest_DATA = \
	defaultFavicon.svg \
	$(NULL)

manifestsscript_manifestdir=$(libdir)/mozembedlite/chrome
manifestsscript_manifest_DATA = \
	EmbedLiteOverrides.manifest \
	$(NULL)

localebrand_manifestdir=$(libdir)/mozembedlite/chrome/en-US/locale/branding
localebrand_manifest_DATA = \
	en-US/brand.dtd \
	en-US/brand.properties \
	$(NULL)

localebrowser_manifestdir=$(libdir)/mozembedlite/chrome/en-US/locale/en-US/browser
localebrowser_manifest_DATA = \
	en-US/aboutCertError.dtd \
	en-US/appstrings.properties \
	en-US/netError.dtd \
	$(NULL)

localebrand_fi_manifestdir=$(libdir)/mozembedlite/chrome/fi/locale/branding
localebrand_fi_manifest_DATA = \
	fi/brand.dtd \
	fi/brand.properties \
	$(NULL)

localebrowser_fi_manifestdir=$(libdir)/mozembedlite/chrome/fi/locale/fi/browser
localebrowser_fi_manifest_DATA = \
	fi/aboutCertError.dtd \
	fi/appstrings.properties \
	fi/netError.dtd \
	$(NULL)

localebrand_ru_manifestdir=$(libdir)/mozembedlite/chrome/ru/locale/branding
localebrand_ru_manifest_DATA = \
	ru/brand.dtd \
	ru/brand.properties \
	$(NULL)

localebrowser_ru_manifestdir=$(libdir)/mozembedlite/chrome/ru/locale/ru/browser
localebrowser_ru_manifest_DATA = \
	ru/aboutCertError.dtd \
	ru/appstrings.properties \
	ru/netError.dtd \
	$(NULL)

AM_CPPFLAGS = $(DEPS_CFLAGS)
